--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+li {
+  width: 20%;
+  height: auto;
+  background: #fff;
+  border: 1px solid #d1d5da;
+  margin: 10px;
+  padding: 50px;
+  float: left;
+  list-style: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 14px;
+  color: #0366d6;
+}
